src/test/ui/parser/macro-keyword.stderr
error: expected identifier, found reserved keyword `macro`
  --> $DIR/macro-keyword.rs:3:4
   |
LL | fn macro() {  //~ ERROR expected identifier, found reserved keyword `macro`
   |    ^^^^^ expected identifier, found reserved keyword

error: aborting due to previous error

