src/test/ui/parser/macro-keyword.rs
// compile-flags: -Z parse-only

fn macro() {  //~ ERROR expected identifier, found reserved keyword `macro`
}

pub fn main() {
}
